Page de connexion
Commencement de la création de la page de connexion d'utilisateur. HTML presque fini manque plus que le CSS

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <p>coucou doudmak</p>
-    <img src="image/maison arbre.avif" alt="maison arbre">
+    <img src="image/maison arbre.avif" alt="maison arbre" class="photo_maison_mc">
 </body>
 </html>
