--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>TaxCAB</title>
 </head>
 <body>
-    <p>coucou doudmak</p>
-    <img src="image/maison arbre.avif" alt="maison arbre" class="photo_maison_mc">
+
+    <header>
+        <img src="Logo/logo_white.png" class="logo">
+
+        <nav>
+            <ul>
+                <li>Inscription</li>
+                <li>Connexion</li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="main">
+        
+
+
+    </div>
+    <footer></footer>
 </body>
 </html>
