--- a/connexion/connexion.html
+++ b/connexion/connexion.html
@@ -19,8 +19,11 @@
             </form>
         </div>
 
+        <div class="image">
+            <p>salut</p>
+        </div>
 
-        <img src="image\maisonarbre.avif" alt="maison" id="maison">
+        <img src="image/maisonarbre.avif" alt="image">
     </div>
 </body>
 </html>
