amélioration de la page de connexion

--- a/connexion/connexion2 (2).html
+++ b/connexion/connexion2 (2).html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="connexion2.css">
-    <script src="https://code.iconify.design/iconify-icon/1.0.3/iconify-icon.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https : //fonts.googleapis.com/css2?family= Paytone+One & family =Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,800 & display= swap" rel="feuille de style">
@@ -19,9 +19,9 @@
          <div class="bx bx-menu" id="menu-icon"></div>
          <nav>
              <ul>
-                 <li><a href="#Home" class="menu_hover">Home</a></li>
-                 <li><a href="#Information" class="menu_hover">Information</a></li>
-                 <li><a href="#Conducteur" class="menu_hover">Conduteur</a></li>
+                 <li><a href="#Home" class="menu_hover">Acuueil</a></li>
+                 <li><a href="#Information" class="menu_hover">Informations</a></li>
+                 <li><a href="#Conducteur" class="menu_hover">Conducteur</a></li>
                  <li><a href="#Chauffeur" class="menu_hover">Chauffeur</a></li>
                  <li><a href=""><div class="bx bx-user" id="user-icon"></div></a></li>
              </ul>
@@ -31,17 +31,16 @@
      <div class="container">
         <div class="form-container sign-up-container">
             <form action="#">
-                <h1 id="inscription">Créer un compte</h1>
+                <h1 id="inscription">Se connecter</h1>
                 <div class="social-container">
-                    <a href="#" class="icons"><iconify-icon icon="uiw:facebook" ></iconify-icon></i></a>
-                    <a href="#" class="icons"><iconify-icon icon="mdi:instagram" ></iconify-icon></i></a>
-                    <a href="#" class="icons"><iconify-icon icon="mdi:linkedin"></iconify-icon></i></a>
+                    <a href="https://www.instagram.com" target="_blank" class="icons"><div class="bx bxl-instagram" id="icons"></div></a>
+                    <a href="https://fr.linkedin.com/" target="_blank" class="icons"><div class="bx bxl-linkedin" id="icons"></div></a>
+                    <a href="https://twitter.com/?lang=fr" target="_blank" class="icons"><div class="bx bxl-twitter" id="icons"></div></a>
                     
                 </div>
-                <input type="text" placeholder="Nom">
                 <input type="email" placeholder="Identifiant">
                 <input type="password" placeholder="Mot de passe">
-                <button>Créer le compte</button>
+                <button>Connexion</button>
             </form>
         </div>
 
