Amelioration Page Accueil

--- a/index.html
+++ b/index.html
@@ -44,16 +44,33 @@
                     <input type="text" name="position">
                 </div>
             </div>
-
-            <div class="type-vehicule">
-                <div class="type-vehicule-title">
-                    <h3>Type de véhicule</h3>
+            <div class="div-type">
+                <div class="type-vehicule">
+                    <div class="type-vehicule-title">
+                        <h3>Type de véhicule</h3>
+                    </div>
+                    <div class="type-vehicule-image">
+                        <div class="bx bxs-car icon" id ="icon-car"></div>
+                        <div class="bx bxs-truck icon" id ="icon-truck"></div>
+                    </div>
                 </div>
-                <div class="type-vehicule-image">
-                    
+                <div class="type-vehicule">
+                    <div class="type-vehicule-title">
+                        <h3>Type de Chauffeur</h3>
+                    </div>
+                    <div class="type-vehicule-image">
+                        <div class="bx bx-female icon" id ="icon-female"></div>
+                        <div class="bx bx-male icon" id ="icon-male"></div>
+                    </div>
                 </div>
             </div>
-            <button>On y va !</button>
+                <div class="flex">
+                    <button class="button-go" type="button"><p>On y va !</p></button>
+                </div>
+        </div>
+
+        <div class="maps">
+            <img src="Image/Carte.png">
         </div>
 
     </section>
