fini page connexion

--- a/connexion/connexion2.html
+++ b/connexion/connexion2.html
@@ -19,15 +19,9 @@
          <div class="bx bx-menu" id="menu-icon"></div>
          <nav>
              <ul>
-<<<<<<< Updated upstream:connexion/connexion2.html
-                 <li><a href="#Home" class="menu_hover">Acuueil</a></li>
+                 <li><a href="#Home" class="menu_hover">Accueil</a></li>
                  <li><a href="#Information" class="menu_hover">Informations</a></li>
                  <li><a href="#Conducteur" class="menu_hover">Conducteur</a></li>
-=======
-                 <li><a href="C:\Users\Ulric\Documents\GitHub\TaxiCab\index.html" class="menu_hover">Home</a></li>
-                 <li><a href="#Information" class="menu_hover">Information</a></li>
-                 <li><a href="#Conducteur" class="menu_hover">Conduteur</a></li>
->>>>>>> Stashed changes:connexion/connexion2 (2).html
                  <li><a href="#Chauffeur" class="menu_hover">Chauffeur</a></li>
                  <li><a href=""><div class="bx bx-user" id="user-icon"></div></a></li>
              </ul>
@@ -48,10 +42,6 @@
                 <input type="password" placeholder="Mot de passe">
                 <button>Connexion</button>
             </form>
-        </div>
-
-        <div class="connexion">
-            
         </div>
      </div>
     
