page de connexion et inscription client finie

--- a/connexion/connexion2.html
+++ b/connexion/connexion2.html
@@ -50,9 +50,9 @@
                 </form>
             </div>
             <div class="overlay-panel overlay-left">
-                <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos officia officiis amet?</p>
-                <button class="ghost" onclick="transition1()">Créer un compte</button>
+                <h1 class="accroche">Heureux de vous revoir !</h1>
+                <p>Si vous disposez d'un compte cliquez ci-dessous</p>
+                <button class="ghost" onclick="transition1()">Se connecter</button>
             </div>
         </div>
         
@@ -73,9 +73,9 @@
                 </form>
             </div>    
             <div class="overlay-panel overlay-right">
-                <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos officia officiis amet?</p>
-                <button class="ghost" id="login" onclick="transition2()">Se connecter</button>
+                <h1 class="accroche">Bienvenue !</h1>
+                <p>Créer un compte et rejoindre notre communauté.</p>
+                <button class="ghost" id="login" onclick="transition2()">Créer un compte</button>
             </div>      
         </div>      
      </div>
