petits changements futiles

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <ul>
                 <li><a href="#Home" class="menu_hover">Home</a></li>
-                <li><a href="#Information" class="menu_hover">Information</a></li>
+                <li><a href="#Information" class="menu_hover">Informations</a></li>
                 <li><a href="#Conducteur" class="menu_hover">Client</a></li>
                 <li><a href="#Chauffeur" class="menu_hover">Chauffeur</a></li>
                 <li><a href="connexion/connexion2.html"><div class="bx bx-user" id="user-icon"></div></a></li>
