--- a/connexion/connexion2.html
+++ b/connexion/connexion2.html
@@ -20,9 +20,9 @@
          <div class="bx bx-menu" id="menu-icon"></div>
          <nav>
              <ul>
-                 <li><a href="#Home" class="menu_hover">Accueil</a></li>
+                 <li><a href="../index.html" class="menu_hover">Home</a></li>
                  <li><a href="#Information" class="menu_hover">Informations</a></li>
-                 <li><a href="#Conducteur" class="menu_hover">Conducteur</a></li>
+                 <li><a href="#Conducteur" class="menu_hover">Client</a></li>
                  <li><a href="#Chauffeur" class="menu_hover">Chauffeur</a></li>
                  <li><a href=""><div class="bx bx-user" id="user-icon"></div></a></li>
              </ul>
