--- a/connexion/connexion2.html
+++ b/connexion/connexion2.html
@@ -16,14 +16,14 @@
 </head>
 <body>
     <header>
-        <h1><a href ="#" class = "logo">TaxCAB</a></h1>
+        <h1><a href ="../index.html" class = "logo">TaxCAB</a></h1>
          <div class="bx bx-menu" id="menu-icon"></div>
          <nav>
              <ul>
-                 <li><a href="#Home" class="menu_hover">Accueil</a></li>
-                 <li><a href="#Information" class="menu_hover">Informations</a></li>
-                 <li><a href="#Conducteur" class="menu_hover">Conducteur</a></li>
-                 <li><a href="#Chauffeur" class="menu_hover">Chauffeur</a></li>
+                 <li><a href="../index.html#Home" class="menu_hover">Accueil</a></li>
+                 <li><a href="../index.html#informations" class="menu_hover">Informations</a></li>
+                 <li><a href="../index.html#client" class="menu_hover">Client</a></li>
+                 <li><a href="../index.html#Chauffeur" class="menu_hover">Chauffeur</a></li>
                  <li><a href=""><div class="bx bx-user" id="user-icon"></div></a></li>
              </ul>
          </nav>
