--- a/connexion/connexion2.html
+++ b/connexion/connexion2.html
@@ -20,7 +20,7 @@
          <div class="bx bx-menu" id="menu-icon"></div>
          <nav>
              <ul>
-                 <li><a href="../index.html#Home" class="menu_hover">Accueil</a></li>
+                 <li><a href="../index.html#Home" class="menu_hover">Home</a></li>
                  <li><a href="../index.html#informations" class="menu_hover">Informations</a></li>
                  <li><a href="../index.html#client" class="menu_hover">Client</a></li>
                  <li><a href="../index.html#Chauffeur" class="menu_hover">Chauffeur</a></li>
