ajout du dossier conducteur

--- a/connexion/connexion2.html
+++ b/connexion/connexion2.html
@@ -44,6 +44,13 @@
                         <input type="text" placeholder="Nom" class="np" required> 
                         <input type="text" placeholder="Prenom" class="np" required>
                     </div>
+                    
+                    
+                    <input type="text" placeholder="Adresse">
+                    <div class="nom-prenom">
+                        <input type="text" placeholder="Ville" class="np">
+                        <input type="text" placeholder="Code Postal" class="np">
+                    </div>
                     <input type="email" placeholder="Identifiant (mail)" required>
                     <input type="password" placeholder="Mot de passe" required>
                     <button>Créer le compte</button>
