création page chauffeur

--- a/connexion/connexion2.html
+++ b/connexion/connexion2.html
@@ -23,12 +23,12 @@
                  <li><a href="../index.html#Home" class="menu_hover">Home</a></li>
                  <li><a href="../index.html#informations" class="menu_hover">Informations</a></li>
                  <li><a href="../index.html#client" class="menu_hover">Client</a></li>
-                 <li><a href="../index.html#Chauffeur" class="menu_hover">Chauffeur</a></li>
+                 <li><a href="../chauffeur/chauffeur.html" class="menu_hover">Chauffeur</a></li>
                  <li><a href=""><div class="bx bx-user" id="user-icon"></div></a></li>
              </ul>
          </nav>
      </header>
-
+     <p class="esp-chauff">Espace client</p>
      <div class="container">
         <div id="formulaire1">
             <div class="form-container sign-up-container">
