page de co chauffeur

--- a/connexion/connexion2.html
+++ b/connexion/connexion2.html
@@ -28,18 +28,11 @@
              </ul>
          </nav>
      </header>
-     <p class="esp-chauff">Espace client</p>
      <div class="container">
         <div id="formulaire1">
             <div class="form-container sign-up-container">
                 <form action="#">
                     <h1 id="inscription">Inscription</h1>
-                    <div class="social-container">
-                        <a href="https://www.instagram.com" target="_blank" class="icons"><div class="bx bxl-instagram" id="icons"></div></a>
-                        <a href="https://fr.linkedin.com/" target="_blank" class="icons"><div class="bx bxl-linkedin" id="icons"></div></a>
-                        <a href="https://twitter.com/?lang=fr" target="_blank" class="icons"><div class="bx bxl-twitter" id="icons"></div></a>
-                        
-                    </div>
                     <div class="nom-prenom">
                         <input type="text" placeholder="Nom" class="np" required> 
                         <input type="text" placeholder="Prenom" class="np" required>
@@ -76,6 +69,7 @@
                     
                     <input type="email" placeholder="Identifiant (mail)" required>
                     <input type="password" placeholder="Mot de passe" required> 
+                    <a href="../Connexionchauffeur/chauffeur.html" class="connexionChauffeur"><p>Vous êtes chauffeur ?</p></a>
                     <button>Connexion</button>
                 </form>
             </div>    
