--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#Home" class="menu_hover">Home</a></li>
                 <li><a href="#Information" class="menu_hover">Informations</a></li>
                 <li><a href="#Conducteur" class="menu_hover">Client</a></li>
-                <li><a href="chauffeur/chauffeur.html" class="menu_hover">Chauffeur</a></li>
+                <li><a href="client/client.html" class="menu_hover">Chauffeur</a></li>
                 <li><a href="connexion/connexion2.html"><div class="bx bx-user" id="user-icon"></div></a></li>
             </ul>
         </nav>
