--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="informations" id="Information">
             
             <div class="informations_title">
-                <h2>Finalement,<br>Qui sommes-nous ?</h2>
+                <h2>Qui sommes-nous ?</h2>
             </div>
             <div class="informations_container">
                 <div class="informations_text">
