modif mon compte

--- a/MonCompte/MonCompte.html
+++ b/MonCompte/MonCompte.html
@@ -28,6 +28,10 @@
         </nav>
     </header>
 
+    <section class="sect1">
+        
+    </section>
+
     <section class="monCompte">
         <div class="container">
             <div class="left">
