--- a/MonCompte/MonCompte.html
+++ b/MonCompte/MonCompte.html
@@ -23,7 +23,8 @@
                 <li><a href="../index.html" class="menu_hover">Informations</a></li>
                 <li><a href="../index.html" class="menu_hover">Client</a></li>
                 <li><a href="../index.html" class="menu_hover">Chauffeur</a></li>
-                <li><a href="../connexion/connexion2.html"><div class="bx bx-user" id="user-icon"></div></a></li>
+                <!--<li><a href="../MonCompte/MonCompte.html" class="menu_hover">Mon Compte</a></li>-->
+                <li><a href="../connexion/connexion2.html"><div class="bx bx-user" class="deroulant" id="user-icon"></div></a></li>
             </ul>
         </nav>
     </header>
@@ -37,6 +38,7 @@
             <div class="left">
                 <div class="infos">
                     <img src="images/dummy.png" class="img-profile" alt=""> <br>
+                    <img src="images/4,5etoiles.png" alt="" id="etoiles">
                     <p>Nom : George</p>
                     <div class="ligne"></div>
                     <p>Prenom : Nicolas</p>
@@ -49,10 +51,55 @@
                 
             </div>
             <div class="right">
-                historique des courses
+                <div class="historique-container">
+                    <h2 id="histo">Historique</h2> 
+                    <div class="ligne-resa">
+                        <div class="row">
+                            <i class='bx bx-map'></i>
+                            <p>Départ : <b>12 place de la Bastille Paris 75011</b> le <b>17/02/2023 à 11h45</b> </p>
+                        </div>
+                        <div class="row">
+                            <i class='bx bx-navigation'></i>
+                            <p>Arrivée : <b>27 Boulevard Saint Michel Paris 75005</b>  le <b>17/02/2023 à 12h08</b> </p> <br>
+                        </div>
+                        <div class="row" id="row-price">
+                            <i class='bx bxs-credit-card'></i>
+                            <p>Prix : <b>17,50€</b></p>
+                        </div>
+                    </div>
+                    <div class="ligne-resa">
+                        <div class="row">
+                            <i class='bx bx-map'></i>
+                            <p>Départ : <b>12 place de la Bastille Paris 75011</b> le <b>17/02/2023 à 11h45</b> </p>
+                        </div>
+                        <div class="row">
+                            <i class='bx bx-navigation'></i>
+                            <p>Arrivée : <b>27 Boulevard Saint Michel Paris 75005</b>  le <b>17/02/2023 à 12h08</b> </p> <br>
+                        </div>
+                        <div class="row" id="row-price">
+                            <i class='bx bxs-credit-card'></i>
+                            <p>Prix : <b>17,50€</b></p>
+                        </div>
+                    </div>
+                    <div class="ligne-resa">
+                        <div class="row">
+                            <i class='bx bx-map'></i>
+                            <p>Départ : <b>12 place de la Bastille Paris 75011</b> le <b>17/02/2023 à 11h45</b> </p>
+                        </div>
+                        <div class="row">
+                            <i class='bx bx-navigation'></i>
+                            <p>Arrivée : <b>27 Boulevard Saint Michel Paris 75005</b>  le <b>17/02/2023 à 12h08</b> </p> <br>
+                        </div>
+                        <div class="row" id="row-price">
+                            <i class='bx bxs-credit-card'></i>
+                            <p>Prix : <b>17,50€</b></p>
+                        </div>
+                    </div>
+                </div>
+                <!--historique des courses
                 prix, pt départ, destination, prix
 
-                contacter, reclamation
+                contacter, reclamation-->
 
             </div>
         </div>
