finition page de mon compte

--- a/MonCompte/MonCompte.html
+++ b/MonCompte/MonCompte.html
@@ -94,8 +94,19 @@
                             <i class='bx bxs-credit-card'></i>
                             <p>Prix : <b>17,50€</b></p>
                         </div>
+                        <p class="vp">Voir plus</p>
+                    </div>
+                    <div class="reclamation">
+                        <h2 id="histo">Besoin d'aide ?</h2> 
+                        <p class="reclam">Si vous avez une réclamation ou une question à props de vos trajets, contactez-nous ici : </p>
+                        <div class="contact">
+                            <p>tel : 01 52 68 45 77</p>
+                            <p>ou</p>
+                            <p>contact@taxcab.fr</p>
+                        </div>
                     </div>
                 </div>
+                
                 <!--historique des courses
                 prix, pt départ, destination, prix
 
