--- a/Connexionchauffeur/chauffeur.html
+++ b/Connexionchauffeur/chauffeur.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="../index.html" class="menu_hover">Home</a></li>
                 <li><a href="../index.html#Information" class="menu_hover">Informations</a></li>
-                <li><a href="../index.html#Conducteur" class="menu_hover">Client</a></li>
+                <li><a href="../index.html#Client" class="menu_hover">Client</a></li>
                 <li><a href="../index.html#Chauffeur" class="menu_hover">Chauffeur</a></li>
                 <li><a href="../connexion/connexion2.html"><div class="bx bx-user" id="user-icon"></div></a></li>
             </ul>
