--- a/MonCompte/MonCompte.html
+++ b/MonCompte/MonCompte.html
@@ -20,9 +20,9 @@
         <nav>
             <ul>
                 <li><a href="../index.html" class="menu_hover">Home</a></li>
-                <li><a href="../index.html" class="menu_hover">Informations</a></li>
-                <li><a href="../index.html" class="menu_hover">Client</a></li>
-                <li><a href="../index.html" class="menu_hover">Chauffeur</a></li>
+                <li><a href="../index.html#Information" class="menu_hover">Informations</a></li>
+                <li><a href="../index.html#Client" class="menu_hover">Client</a></li>
+                <li><a href="../index.html#Chauffeur" class="menu_hover">Chauffeur</a></li>
                 <!--<li><a href="../MonCompte/MonCompte.html" class="menu_hover">Mon Compte</a></li>-->
                 <li><a href="../connexion/connexion2.html"><div class="bx bx-user" class="deroulant" id="user-icon"></div></a></li>
             </ul>
